finished part 3 of the project and revised part 2

--- a/LightCurvePlotting.ipynb
+++ b/LightCurvePlotting.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Part 1\n",
+    " Part 1\n",
     "### Basic variables in terms of solar or earth masses"
    ],
    "metadata": {
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -52,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
       "text/plain": "<Axes: title={'center': 'Light Curve of the Transiting Exoplanet'}, xlabel='Time (days)', ylabel='Normalized Flux (%)'>"
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "def averageTransitDepth(sTime, eTime):\n",
     "    #get all the flux values between the start and end times\n",
     "    #return the average of the flux values\n",
-    "    return data.where((data['time'] >= sTime) & (data['time'] <= eTime))['flux'].mean()\n",
+    "    return 1 - data.where((data['time'] >= sTime) & (data['time'] <= eTime))['flux'].mean()\n",
     "def stdTransitDepth(sTime, eTime):\n",
     "    #get all the flux values between the start and end times\n",
     "    #return the standard deviation of the flux values\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -156,7 +156,7 @@
     "    for j in range(len(eTime)):\n",
     "        if vectorsub[j] > 6500 and \\\n",
     "                vectorsub[j] < 9000 and \\\n",
-    "                averageTransitDepth(sTime[i],eTime[j]) < 0.983:\n",
+    "                averageTransitDepth(sTime[i],eTime[j]) > 0.017:\n",
     "            transits.append([sTime[i], eTime[j]])\n",
     "            print(\"Transit detected starting at\", sTime[i], \"seconds and ending at\", eTime[j], \"seconds.\")\n",
     "            count += 1\n",
@@ -179,13 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
       "text/plain": "<Axes: title={'center': 'Light Curve of the First Transit'}, xlabel='Time (seconds)', ylabel='Normalized Flux (%)'>"
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -216,21 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average depth of the first transit is 0.9758746434438095\n",
-      "The standard deviation of the first transit is 0.006144430850758696\n"
+      "The average depth of the first transit is 0.021449769320869505\n",
+      "The standard deviation of the first transit is 0.010625782898794837\n"
      ]
     }
    ],
    "source": [
     "#adding a buffer of 347 seconds to the start and end times of the first transit so that the average and standard deviation are not affected by outliers at the start and end of the transit\n",
-    "print(\"The average depth of the first transit is\", averageTransitDepth(transits[0][0] + 347, transits[0][1] - 347))\n",
-    "print(\"The standard deviation of the first transit is\", stdTransitDepth(transits[0][0] + 347, transits[0][1] - 347))"
+    "print(\"The average depth of the first transit is\", averageTransitDepth(transits[0][0], transits[0][1]))\n",
+    "print(\"The standard deviation of the first transit is\", stdTransitDepth(transits[0][0], transits[0][1]))"
    ],
    "metadata": {
     "collapsed": false
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
@@ -294,17 +294,7 @@
     }
    ],
    "source": [
-    "newData = pd.DataFrame()\n",
-    "longest = 0\n",
-    "longData = []\n",
     "plt.figure(figsize=(15, 5))\n",
-    "for i in range(len(transits)):\n",
-    "    #normalize the time between the transits\n",
-    "    mycooldataframe = list((data['time'].where((data['time'] >= transits[i][0]) & (data['time'] <= transits[i][1])) - transits[i][0]).dropna())\n",
-    "    if len(mycooldataframe) > longest:\n",
-    "        longest = len(mycooldataframe)\n",
-    "        longData = mycooldataframe\n",
-    "newData['time'] = longData\n",
     "for i in range(len(transits)):\n",
     "    time = list((data['time'].where((data['time'] >= transits[i][0]) & (data['time'] <= transits[i][1])) - transits[i][0]).dropna())\n",
     "    flux = list((data['flux'].where((data['time'] <= transits[i][1]) & (data['time'] >= transits[i][0]))).dropna())\n",
@@ -330,66 +320,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of the planet is: 0.025962246514069007 R_solar\n"
+      "Size of the planet is: 2.752945300905833 R_Earth, with error: 0.025747906469918994 R_Earth\n"
      ]
     }
    ],
    "source": [
-    "averageDepths = []\n",
-    "averageSD = []\n",
+    "depths = []\n",
+    "standardDeviations = []\n",
+    "\n",
     "for i in range(len(transits)):\n",
-    "    averageDepths = averageTransitDepth(transits[i][0] + 347, transits[i][1] - 347)\n",
-    "    averageSDs = stdTransitDepth(transits[i][0] + 347, transits[i][1] - 347)\n",
-    "averageDepth = np.average(averageDepths)\n",
-    "averageSD = np.average(averageSDs)\n",
-    "R_planet = R_star * np.sqrt(1 - averageDepth)\n",
-    "print(\"Size of the planet is:\", R_planet, \"R_solar\")"
+    "    depths.append(averageTransitDepth(transits[i][0], transits[i][1]))\n",
+    "    standardDeviations.append(stdTransitDepth(transits[i][0], transits[i][1]))\n",
+    "R_planets = R_star * np.sqrt(depths)\n",
+    "#convert between solar radii and earth radii\n",
+    "R_planets = R_planets * 109.076  # Convert to Earth radii\n",
+    "R_planet = np.average(R_planets)\n",
+    "print(\"Size of the planet is:\", R_planet, \"R_Earth, with error:\", R_planets.std() / np.sqrt(len(transits)), \"R_Earth\")"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "#### Calculating the error in the size of the planet"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.001609010789453071 R_solar\n"
-     ]
-    }
-   ],
-   "source": [
-    "standardErrorLum = averageSD / len(transits)\n",
-    "error = R_star * (np.sqrt(1 - (averageDepth - standardErrorLum)) - np.sqrt(1 - (averageDepth + standardErrorLum)))\n",
-    "print(error, \"R_solar\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
